--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-/*html {
-			outline: 1px solid white;
-}*/
+html {
+	height: 100%;
+}
 
 body {
 	overflow-x: hidden;
@@ -10,7 +10,8 @@ body {
 	background: #FF9595;
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
-	min-height: 100vh;
+/*	min-height: 100vh;*/
+	min-height: 100%;
 	transition: background 10s ease;
 
 
@@ -465,7 +466,7 @@ background: rgba(250, 250, 250, 0.9);
 			rgba(255,255,255,0.56) 0%,
 			rgba(241,210,194,1) 100%
 		);*/
-	background: rgba(250, 250, 250, 0.9);
+	background: rgba(250, 250, 250, 0.95);
 }
 
 .lb-overlay > div{
@@ -532,6 +533,10 @@ background: rgba(250, 250, 250, 0.9);
 	opacity: 0;
 	box-shadow: 0px 2px 7px rgba(0,0,0,0.2);
 	transition: opacity 0.5s linear;
+}
+
+.lb-overlay a{
+	color: black;
 }
 
 .glyphicon-chevron-right, .glyphicon-chevron-left{
