--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', end
 	}
 }
 
+
 .aboutmiddle {
 	margin-top: 50px;
 
@@ -362,6 +363,27 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', end
 }
 
 
+@media(max-width: 500px) {
+	.circle {
+		width: 350px;
+		height: 350px;
+	}
+
+	.cinfo {
+		padding: 65px 50px 50px 50px;
+	}
+
+	.cinfo h3 {
+		margin-bottom: 10px;
+	}
+
+	.cinfo p{
+		font-size: 12px;
+	}
+
+	}
+
+
 
 @-webkit-keyframes neon1 {
   from {
@@ -411,8 +433,6 @@ canvas {
 }
 
 .proj{
-
-	float: left;
 	position: relative;
 	list-style-type: none;
 	margin-bottom: 20px;
@@ -579,6 +599,11 @@ background: rgba(250, 250, 250, 0.9);
 .lb-overlay:target a.lb-close{
 	opacity: 1;
 }
+
+@media(max-width: 500px) {
+
+
+	}
 
 
 .stars {
